[gd_scene load_steps=7 format=2]

[ext_resource path="res://Source/Theme/Main.theme" type="Theme" id=1]
[ext_resource path="res://Source/Menu/Options.gd" type="Script" id=2]
[ext_resource path="res://Source/Menu/List.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/Theme/ButtonFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Theme/Panel.png" type="Texture" id=5]
[ext_resource path="res://Assets/Theme/PanelSelected.png" type="Texture" id=6]

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 540.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Btns" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Btns"]
margin_right = 492.0
margin_bottom = 1122.0

[node name="GameDurationLabel" type="Label" parent="Btns/VBoxContainer"]
margin_right = 492.0
margin_bottom = 183.0
size_flags_vertical = 7
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Game Duration"
valign = 1

[node name="GameDurationOpt" type="HBoxContainer" parent="Btns/VBoxContainer"]
margin_top = 187.0
margin_right = 492.0
margin_bottom = 371.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opt1" type="TextureButton" parent="Btns/VBoxContainer/GameDurationOpt"]
margin_right = 120.0
margin_bottom = 184.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Btns/VBoxContainer/GameDurationOpt/Opt1"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "15s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opt2" type="TextureButton" parent="Btns/VBoxContainer/GameDurationOpt"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 184.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Btns/VBoxContainer/GameDurationOpt/Opt2"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "30s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opt3" type="TextureButton" parent="Btns/VBoxContainer/GameDurationOpt"]
margin_left = 248.0
margin_right = 368.0
margin_bottom = 184.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Btns/VBoxContainer/GameDurationOpt/Opt3"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "1m"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opt4" type="TextureButton" parent="Btns/VBoxContainer/GameDurationOpt"]
margin_left = 372.0
margin_right = 492.0
margin_bottom = 184.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Btns/VBoxContainer/GameDurationOpt/Opt4"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "2m"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="Label" parent="Btns/VBoxContainer"]
margin_top = 375.0
margin_right = 492.0
margin_bottom = 559.0
size_flags_vertical = 7
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Restaurant List"
valign = 1

[node name="ListOpt" type="HBoxContainer" parent="Btns/VBoxContainer"]
margin_top = 563.0
margin_right = 492.0
margin_bottom = 746.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditBtn" type="TextureButton" parent="Btns/VBoxContainer/ListOpt"]
margin_right = 244.0
margin_bottom = 183.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Btns/VBoxContainer/ListOpt/EditBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "EDIT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClearBtn" type="TextureButton" parent="Btns/VBoxContainer/ListOpt"]
margin_left = 248.0
margin_right = 492.0
margin_bottom = 183.0
size_flags_horizontal = 3
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Btns/VBoxContainer/ListOpt/ClearBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "CLEAR"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirmation" type="ConfirmationDialog" parent="Btns/VBoxContainer/ListOpt/ClearBtn"]
margin_left = -121.0
margin_top = -159.0
margin_right = 120.0
margin_bottom = 134.0
rect_min_size = Vector2( 330, 70 )
popup_exclusive = true
window_title = ""
resizable = true
dialog_text = "Clearing the Restaurant List will erase all of your data.

Are you sure?"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolumeLabel" type="Label" parent="Btns/VBoxContainer"]
margin_top = 750.0
margin_right = 492.0
margin_bottom = 934.0
size_flags_vertical = 7
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Master Volume"
valign = 1

[node name="MasterVoumeSlider" type="HSlider" parent="Btns/VBoxContainer"]
margin_top = 938.0
margin_right = 492.0
margin_bottom = 1122.0
size_flags_vertical = 3
theme = ExtResource( 1 )
step = 2.0
value = 50.0
tick_count = 3
ticks_on_borders = true

[node name="BackBtn" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Label" type="Label" parent="BackBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Menu"
align = 1
valign = 1

[node name="List" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="toggled" from="Btns/VBoxContainer/GameDurationOpt/Opt1" to="." method="_on_Opt1_toggled"]
[connection signal="toggled" from="Btns/VBoxContainer/GameDurationOpt/Opt2" to="." method="_on_Opt2_toggled"]
[connection signal="toggled" from="Btns/VBoxContainer/GameDurationOpt/Opt3" to="." method="_on_Opt3_toggled"]
[connection signal="toggled" from="Btns/VBoxContainer/GameDurationOpt/Opt4" to="." method="_on_Opt4_toggled"]
[connection signal="pressed" from="Btns/VBoxContainer/ListOpt/EditBtn" to="." method="_on_EditBtn_pressed"]
[connection signal="pressed" from="Btns/VBoxContainer/ListOpt/ClearBtn" to="." method="_on_ClearBtn_pressed"]
[connection signal="confirmed" from="Btns/VBoxContainer/ListOpt/ClearBtn/Confirmation" to="." method="_on_Confirmation_confirmed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_BackBtn_pressed"]
